--- a/assets/main.css
+++ b/assets/main.css
@@ -18,7 +18,7 @@ body {
 }
 h1 {
   font-size: 30px;
-  margin: 0 auto 30px;
+  margin: 0 auto 20px;
   padding: 3px;
 }
 @media (min-width: 768px) {
@@ -35,7 +35,13 @@ main li {
 }
 p,
 main ul {
-  margin: 0 auto 50px;
+  margin: 0 auto 30px;
+}
+@media (min-width: 768px) {
+  p,
+  main ul {
+    margin: 0 auto 50px;
+  }
 }
 main ul {
   display: block;
@@ -46,7 +52,12 @@ main ul li {
   display: block;
   padding: 0 0 0 20px;
   position: relative;
-  margin: 0 0 20px;
+  margin: 0 0 10px;
+}
+@media (min-width: 768px) {
+  main ul li {
+    margin: 0 0 20px;
+  }
 }
 main ul li:before {
   content: '';
